# vector-graphics-editor

./: .gitattributes  .gitignore  1.cvg  1.md  10.cvg  11.cvg  12.cvg  13.cvg  14.cvg  15.cvg  16.cvg  17.cvg  18.cvg  2.cvg  3.cvg  4.cvg  5.cvg  6.cvg  7.cvg  8.cvg  9.cvg  CMakeLists.txt  README.md  api_documentation_update.md  bd.sh  main.cpp  vector_graphics_editor_documentation.txt
.VSCodeCounter/2025-04-10_20-57-19/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.VSCodeCounter/2025-04-10_21-02-20/: details.md  diff-details.md  diff.md  diff.txt  results.json  results.md  results.txt
backup/: CMakeLists.txt  CMakePresets.json
build_release/: CMakeCache.txt  Makefile  cmake_install.cmake
build_release/.qt/: QtDeploySupport.cmake  QtDeployTargets.cmake
build_release/vector-graphics-editor_autogen/: deps  moc_predefs.h  mocs_compilation.cpp
include/command/: move_command.cpp  move_command.h  rotate_command.cpp  rotate_command.h  scale_command.cpp  scale_command.h
include/core/: draw_strategy.cpp  draw_strategy.h  graphic.h  graphic_factory.cpp  graphic_factory.h  graphic_manager.cpp  graphic_manager.h
include/state/: draw_state.cpp  draw_state.h  edit_state.cpp  edit_state.h  editor_state.cpp  editor_state.h
include/ui/: draw_area.cpp  draw_area.h  main_window.cpp  main_window.h
src/: main.cpp
src/command/: clip_command.cpp  clip_command.h  command.cpp  command.h  command_manager.cpp  command_manager.h  composite_command.cpp  composite_command.h  connection_command.cpp  connection_command.h  connection_delete_command.cpp  connection_delete_command.h  create_graphic_command.cpp  create_graphic_command.h  fill_command.cpp  fill_command.h  move_command.cpp  move_command.h  paste_command.cpp  paste_command.h  rotate_command.cpp  rotate_command.h  scale_command.cpp  scale_command.h  selection_command.cpp  selection_command.h  style_change_command.cpp  style_change_command.h  transform_command.cpp  transform_command.h
src/core/: bezier_graphic_item.cpp  bezier_graphic_item.h  circle_graphic_item.cpp  circle_graphic_item.h  concrete_flowchart_connector_item.h  connection_manager.cpp  connection_manager.h  connection_point_overlay.cpp  connection_point_overlay.h  draw_strategy.cpp  draw_strategy.h  ellipse_graphic_item.cpp  ellipse_graphic_item.h  flowchart_base_item.cpp  flowchart_base_item.h  flowchart_connector_item.cpp  flowchart_connector_item.h  flowchart_decision_item.cpp  flowchart_decision_item.h  flowchart_io_item.cpp  flowchart_io_item.h  flowchart_process_item.cpp  flowchart_process_item.h  flowchart_start_end_item.cpp  flowchart_start_end_item.h  graphic.cpp  graphic.h  graphic_item.cpp  graphic_item.h  graphics_clipper.cpp  graphics_clipper.h  graphics_item_factory.cpp  graphics_item_factory.h  image_manager.cpp  image_manager.h  line_graphic_item.cpp  line_graphic_item.h  rectangle_graphic_item.cpp  rectangle_graphic_item.h  selection_manager.cpp  (+1 more)
src/state/: auto_connect_state.cpp  auto_connect_state.h  clip_state.cpp  clip_state.h  draw_state.cpp  draw_state.h  edit_state.cpp  edit_state.h  editor_state.cpp  editor_state.h  fill_state.cpp  fill_state.h
src/ui/: draw_area.cpp  draw_area.h  image_resizer.cpp  image_resizer.h  main_window.cpp  (+1 more)
(+22 files in other folders)
